--- a/Konversi Suhu/css/style.css
+++ b/Konversi Suhu/css/style.css
@@ -48,6 +48,8 @@ button:disabled {
     cursor: not-allowed;
 }
 .explanation {
+    display: flex;
+    justify-content: center;
     margin-top: 20px;
     padding: 10px;
     background-color: #f9f9f9;
